# relay

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-integration.yml  ci.yml  deploy.yml  release-sdk.yml
apps/dashboard/: next.config.mjs  package.json  tailwind.config.ts
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/lib/: api.ts
apps/web/: README.md  package.json  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/components/: Code.tsx  CodeBlock.tsx  CodeTabs.tsx  DocsPage.tsx  DocsSidebar.tsx  LanguageTabs.tsx  LocaleSwitcher.tsx  Logo.tsx  Mermaid.tsx  Reveal.tsx  StackMarquee.tsx  Waitlist.tsx
apps/web/lib/: dict.ts  docs-nav.ts  relay-url.ts
docs/: DEPLOY_RUNBOOK.md
examples/hello-agent/: index.ts  package.json  tsconfig.json
examples/memory-demo/: index.ts  package.json
examples/streamlit-demo/: .env.example  .gitignore  README.md  agents.py  app.py  bridge.py  pyproject.toml  requirements.txt  tools.py
migrations/: 001_init.sql  002_byok.sql  003_memory.sql  004_security.sql  005_run_linking.sql
migrations/clickhouse/: 001_events.sql
runtime/: Dockerfile  fly.toml  go.mod
runtime/cmd/runtime/: main.go
runtime/internal/agent/: agent.go
scripts/: screenshot.mjs  setup.mjs
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/examples/: custom_tool.py  hello_agent.py
sdks/python/relayhq/: __init__.py  agent.py  builtin.py  client.py  graph.py  orchestrator.py  schema.py  subagent.py  tool.py  types.py  voice.py
tests/integration/: 01-broker.mjs  02-security.mjs  03-scale.mjs  04-composition.mjs  05-graph.mjs  06-orchestrator.mjs  README.md  run-all.mjs
(+28 files in other folders)
