[project]
name = "relay-streamlit-demo"
version = "0.0.1"
description = "Streamlit chat UI demoing the @relayhq/sdk Python client with multiple agents and tools."
requires-python = ">=3.10"
dependencies = [
  "relayhq>=0.1.0",
  "streamlit>=1.40.0",
  "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
